[package]
name = "speedball2-sound-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
cpal = "0.15"
eframe = "0.21"
egui = "0.21"
rfd = "0.9.*"
wav = "1.0"